--- a/index.html
+++ b/index.html
@@ -11,12 +11,276 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- custom css -->
     <link rel="stylesheet" href="./CSS/style.css">
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>Fazle Rabby Talukder</title>
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+        <div class="header-part mt-5">
+            <div class="row">
+                <div class="col-md-6 float-left">
+                    <h2>Fazle Rabby Talukder</h2>
+                    <p class="mb-4">Junior Developer</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Dhaka, Bangladesh, 1209 Dhaka, Bangladesh</p>
+                    <p><i class="fas fa-envelope"></i> talukderfazlerabby@gmail.com</p>
+                    <p><i class="fas fa-phone"></i> +8801739719796</p>
+                    <p><i class="fas fa-mouse-pointer"></i> <a
+                            href="https://fazle-rabby-talukder.web.app/">https://fazle-rabby-talukder.web.app/</a></p>
+                    <p><i class="fab fa-linkedin-in"></i> <a
+                            href="https://www.linkedin.com/in/fazle-rabby-talukder/">https://www.linkedin.com/in/fazle-rabby-talukder/</a>
+                    </p>
+                    <p><i class="fab fa-github"></i> <a
+                            href="https://github.com/fazlerabbytalukder">https://github.com/fazlerabbytalukder</a></p>
+                </div>
+                <div class="col-md-6">
+                    <img class="rounded float-md-end" src="./images/cv image.jpg" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="body-part">
+            <div class="profile my-4">
+                <h4><i class="far fa-address-card"></i> PROFILE</h4>
+                <hr class="py-1">
+                <p>My name is Fazle Rabby Talukder. People find me enthusiastic & friendly. Sharing knowledge is my passion. My biggest strength is – I am a quick self-learner. Computer technology is my playground. I am a Programmer and Web Developer. Now i am working on web development with excellent developing skills and want to work in an innovative company where my creative work will be appreciated. </p>
+            </div>
+            <div class="education">
+                <h4><i class="fas fa-graduation-cap"></i> EDUCATION</h4>
+                <hr class="py-1">
+                <div class="university mb-3">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p class="lh-1"><b>Bachelor of Science in Computer Science & Engineering,</b></p>
+                            <p class="fst-italic lh-1"><a href="https://daffodilvarsity.edu.bd/">Daffodil International University</a></p>
+                            <p class="lh-1"><b>CGPA:</b> 3.75 out of 4.00</p>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="text-end">01/2018 – 12/2021</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="College mb-3">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p class="lh-1"><b>Higher Secondary Certificate,</b></p>
+                            <p class="fst-italic lh-1"><a href="#">Ibrahim Khan Govt. College</a></p>
+                            <p class="lh-1"><b>Board:</b> Dhaka</p>
+                            <p class="lh-1"><b>Major:</b> Science</p>
+                            <p class="lh-1"><b>CGPA:</b> 5.00 out of 5.00</p>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="text-end">07/2014 – 07/2016</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="school mb-3">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p class="lh-1"><b>Secondary School Certificate,</b></p>
+                            <p class="fst-italic lh-1"><a href="#">Bhuapur Govt. Pilot High School</a></p>
+                            <p class="lh-1"><b>Board:</b> Dhaka</p>
+                            <p class="lh-1"><b>Major:</b> Science</p>
+                            <p class="lh-1"><b>CGPA:</b> 5.00 out of 5.00</p>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="text-end">01/2012 – 01/2014</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="languages pb-4">
+                <h4><i class="fas fa-globe-europe"></i> LANGUAGES</h4>
+                <hr class="py-1">
+                <div class="row">
+                    <div class="col-md-4">
+                        <ul>
+                            <li>Bengali</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <ul>
+                            <li>English</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <ul>
+                            <li>Hindi</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="professonal-experience">
+                <h4><i class="fas fa-briefcase"></i> PROFESSIONAL EXPERIENCE</h4>
+                <hr class="py-1">
+                <div class="job-1 mb-3">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p class="lh-1"><b>Software Engineer Intern,</b></p>
+                            <p class="fst-italic lh-1"><a href="https://anytimeoffice.com.au/">AnyTimeOffice</a></p>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="text-end">01/2022 – present</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="job-2 mb-3">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p class="lh-1"><b>Participate in ACM ICPC Dhaka Regional Contest,</b></p>
+                            <p class="fst-italic lh-1"><a href="#">Preliminary</a></p>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="text-end">09/2018</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="job-3 mb-3">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p class="lh-1"><b>Participate in Takeoff Programming Contest Summerʼ18,</b></p>
+                            <p class="fst-italic lh-1"><a href="#">Organized by DIU Computer and Programming Club</a></p>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="text-end">07/2018</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="job-4 mb-3">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <p class="lh-1"><b>Participate in Takeoff Programming Contest Springʼ18,</b></p>
+                            <p class="fst-italic lh-1"><a href="#">Organized by DIU Computer and Programming Club</a></p>
+                        </div>
+                        <div class="col-md-6">
+                            <p class="text-end">03/2018</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="skills">
+                <h4><i class="fas fa-brain"></i> SKILLS</h4>
+                <hr class="py-1">
+                <div class="row">
+                    <div class="col-md-4">
+                        <p><b>Microsoft Office</b></p>
+                        <ul>
+                            <li>MS Word</li>
+                            <li>MS Excel</li>
+                            <li>MS PowerPoint</li>
+                        </ul>
+                        <p><b>Web Development (Comfortable)</b></p>
+                        <ul>
+                            <li>Firebase</li>
+                            <li>MongoDB</li>
+                            <li>Express.js</li>
+                            <li>Node.js</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <p><b>C/C++ Programming Language</b></p>
+                        <ul>
+                            <li>Competitive Programming</li>
+                        </ul>
+                        <p><b>Git and GitHub</b></p>
+                        <ul>
+                            <li>Repository Create</li>
+                            <li>Commit</li>
+                            <li>Push</li>
+                            <li>Pull</li>
+                            <li>GitHub Page</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <p><b>Git and GitHub</b></p>
+                        <ul>
+                            <li>HTML5</li>
+                            <li>CSS3</li>
+                            <li>SASS</li>
+                            <li>Bootstrap 5</li>
+                            <li>JavaScript</li>
+                            <li>ES6</li>
+                            <li>React js</li>
+                            <li>React Bootstrap</li>
+                            <li>Material Ui</li>
+                            <li>Rest API</li>
+                            <li>React Router</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="projects py-4">
+                <h4><i class="fas fa-handshake"></i> PROJECTS</h4>
+                <hr class="py-1">
+                <div class="project-1 mb-5">
+                    <p class="lh-1"><a href="https://nish-website.web.app/"><b>OVILASHI,</b> <i>Wooden Ornaments Selling Website</i></a></p>
+                    <p class="lh-1">Overview:</p>
+                    <ul class="lh-1">
+                        <li>Order any Products after login.</li>
+                        <li>User Can book & remove any products whenever the user want.</li>
+                        <li>Admin can Add, Delete & approve any products.</li>
+                    </ul>
+                    <p class="lh-1"><b>Technology Used:</b> HTML5, CSS3, React.js, Material Ui, React Router, Node.js, Express.js, MongoDB, Firebase</p>
+                </div>
+                <div class="project-2 mb-5">
+                    <p class="lh-1"><a href="https://tangail-district-park.web.app/"><b>TANGAIL DISTRICT PARK,</b> <i>Park Ride Booking</i></a></p>
+                    <p class="lh-1">Overview:</p>
+                    <ul class="lh-1">
+                        <li>Implemented firebase authentication when a user books any ride.</li>
+                        <li>When a product is approved the user will see it as booked..</li>
+                        <li>We can add new services and it will appear in the services section. </li>
+                    </ul>
+                    <p class="lh-1"><b>Technology Used:</b> HTML5, CSS3, React.js, React Bootstrap, React Router, React Hook Forms Node.js, Express.js, MongoDB, Firebase </p>
+                </div>
+                <div class="project-3 mb-5">
+                    <p class="lh-1"><a href="https://tourist-travel-bd.web.app/"><b>Transfer,</b> <i>Bus Booking</i></a></p>
+                    <p>Overview:</p>
+                    <ul class="lh-1">
+                        <li>Date Specific Booking System after user log in. </li>
+                        <li>Dynamic Review System implemented. </li>
+                        <li>Admin can manage all products.</li>
+                    </ul>
+                    <p class="lh-1"><b>Technology Used:</b> HTML5, CSS3, React.js, Material Ui, React Router, Node.js, Express.js, MongoDB, Firebase.</p>
+                </div>
+            </div>
+            <div class="publications">
+                <h4><i class="fas fa-atlas"></i> PUBLICATIONS</h4>
+                <hr class="py-1">
+                <p><a href="https://ieeexplore.ieee.org/abstract/document/9676197/"><b>Restaurant recommendation system in dhaka city using machine learning,</b></a> <i>IEEE</i></p>
+            </div>
+            <div class="courses py-4">
+                <h4><i class="far fa-address-book"></i> COURSES</h4>
+                <hr class="py-1">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p><a href="https://ieeexplore.ieee.org/abstract/document/9676197/"><b>Complete Web Development Course With Jhankar Mahbub,</b></a> <i>Programming Hero</i></p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="text-end">09/2021 – present</p>
+                    </div>
+                </div>
+            </div>
+            <div class="references pb-4">
+                <h4><i class="fab fa-rust"></i> REFERENCES</h4>
+                <hr class="py-1">
+                <p class="lh-1"><b>Mr. Abdus Sattar,</b> <i>Assistant Professor, DIU</i></p>
+                <p class="lh-1">abdus.cse@diu.edu.bd, 01818392800</p>
+            </div>
+            <div class="diclaration">
+                <h4><i class="fas fa-people-arrows"></i> DECLARATION</h4>
+                <hr class="py-1">
+                <p>Everything written or mentioned in my resume is true and fully acknowledged by me</p>
+                <div class="sign text-end">
+                    <img src="./images/sign.jpg" alt="">
+                    <p class="lh-1">Fazle Rabby Talukder</p>
+                    <p class="lh-1">Dhaka, 01/01/2022</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
