--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 <body>
     <div class="container">
+        <!-- header part -->
         <div class="header-part mt-5">
             <div class="row">
                 <div class="col-md-6 float-left">
@@ -42,12 +43,15 @@
                 </div>
             </div>
         </div>
+        <!-- body part -->
         <div class="body-part">
+            <!-- profile part -->
             <div class="profile my-4">
                 <h4><i class="far fa-address-card"></i> PROFILE</h4>
                 <hr class="py-1">
                 <p>My name is Fazle Rabby Talukder. People find me enthusiastic & friendly. Sharing knowledge is my passion. My biggest strength is – I am a quick self-learner. Computer technology is my playground. I am a Programmer and Web Developer. Now i am working on web development with excellent developing skills and want to work in an innovative company where my creative work will be appreciated. </p>
             </div>
+            <!-- education part -->
             <div class="education">
                 <h4><i class="fas fa-graduation-cap"></i> EDUCATION</h4>
                 <hr class="py-1">
@@ -92,6 +96,7 @@
                     </div>
                 </div>
             </div>
+            <!-- language part -->
             <div class="languages pb-4">
                 <h4><i class="fas fa-globe-europe"></i> LANGUAGES</h4>
                 <hr class="py-1">
@@ -113,6 +118,7 @@
                     </div>
                 </div>
             </div>
+            <!-- professonal experience part -->
             <div class="professonal-experience">
                 <h4><i class="fas fa-briefcase"></i> PROFESSIONAL EXPERIENCE</h4>
                 <hr class="py-1">
@@ -161,6 +167,7 @@
                     </div>
                 </div>
             </div>
+            <!-- skill part -->
             <div class="skills">
                 <h4><i class="fas fa-brain"></i> SKILLS</h4>
                 <hr class="py-1">
@@ -212,6 +219,7 @@
                     </div>
                 </div>
             </div>
+            <!-- projects part -->
             <div class="projects py-4">
                 <h4><i class="fas fa-handshake"></i> PROJECTS</h4>
                 <hr class="py-1">
@@ -246,11 +254,13 @@
                     <p class="lh-1"><b>Technology Used:</b> HTML5, CSS3, React.js, Material Ui, React Router, Node.js, Express.js, MongoDB, Firebase.</p>
                 </div>
             </div>
+            <!-- publication part -->
             <div class="publications">
                 <h4><i class="fas fa-atlas"></i> PUBLICATIONS</h4>
                 <hr class="py-1">
                 <p><a href="https://ieeexplore.ieee.org/abstract/document/9676197/"><b>Restaurant recommendation system in dhaka city using machine learning,</b></a> <i>IEEE</i></p>
             </div>
+            <!-- courses part -->
             <div class="courses py-4">
                 <h4><i class="far fa-address-book"></i> COURSES</h4>
                 <hr class="py-1">
@@ -263,12 +273,14 @@
                     </div>
                 </div>
             </div>
+            <!-- reference part -->
             <div class="references pb-4">
                 <h4><i class="fab fa-rust"></i> REFERENCES</h4>
                 <hr class="py-1">
                 <p class="lh-1"><b>Mr. Abdus Sattar,</b> <i>Assistant Professor, DIU</i></p>
                 <p class="lh-1">abdus.cse@diu.edu.bd, 01818392800</p>
             </div>
+            <!-- diclaration part -->
             <div class="diclaration">
                 <h4><i class="fas fa-people-arrows"></i> DECLARATION</h4>
                 <hr class="py-1">
